--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ libarchive3-sys = "0.1.2"
 log = "0.4.17"
 mime = "0.3.16"
 reqwest = "0.11.11"
-serde = "1.0.140"
+serde = { version = "1.0.140", features = ["derive"] }
+serde_json = "1.0.82"
 
 [dependencies.tokio]
 version = "1.20.1"
