--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ actix-files = "0.6.2"
 actix-web = "4.1.0"
 anyhow = "1.0.58"
 async-std = "1.12.0"
+async-trait = "0.1.56"
 futures = "0.3.21"
 lazy_static = "1.4.0"
 libarchive = "0.1.1"
