--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "nucleus"
+name = "native-planet-orchestrator"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-actix-files = "0.6.2"
 actix-web = "4.1.0"
 anyhow = "1.0.58"
 async-std = "1.12.0"
@@ -14,12 +11,30 @@ async-trait = "0.1.56"
 futures = "0.3.21"
 lazy_static = "1.4.0"
 libarchive = "0.1.1"
-libarchive3-sys = "0.1.2"
 log = "0.4.17"
-mime = "0.3.16"
-reqwest = "0.11.11"
-serde = { version = "1.0.140", features = ["derive"] }
 serde_json = "1.0.82"
+sha2 = "0.10.2"
+generic-array = "0.14.5"
+pin-project-lite = "0.2.9"
+
+[dependencies.reqwest]
+version = "0.11.11"
+features = [
+    "__tls",
+    "default-tls",
+    "gzip",
+    "hyper-tls",
+    "native-tls-crate",
+    "serde_json",
+    "stream",
+    "tokio-native-tls",
+]
+
+[dependencies.serde]
+version = "1.0.140"
+features = [
+    "derive"
+]
 
 [dependencies.tokio]
 version = "1.20.1"
