--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde_json = "1.0.82"
 sha2 = "0.10.2"
 generic-array = "0.14.5"
 pin-project-lite = "0.2.9"
+regex = "1.6.0"
+actix-multipart = "0.4.0"
 
 [dependencies.reqwest]
 version = "0.11.11"
@@ -24,6 +26,7 @@ features = [
     "default-tls",
     "gzip",
     "hyper-tls",
+    "json",
     "native-tls-crate",
     "serde_json",
     "stream",
@@ -44,6 +47,7 @@ features = [
     "io-std",
     "io-util",
     "macros",
+    "net",
     "process",
     "tokio-macros",
 ]
